@@ -1,2 +1,2 @@
 usr/share/doc/@COMMON_PKG@/@NEWS@ usr/share/doc/@BIN_PKG@/@NEWS@
-usr/share/doc/@COMMON_PKG@/@README@ usr/share/doc/@BIN_PKG@/@README@
+usr/share/doc/@COMMON_PKG@/@README.md@ usr/share/doc/@BIN_PKG@/@README.md@
